# rust-skeptic

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.md.skt.md  appveyor.yml  build.rs  deny.toml  template-example.md
.github/workflows/: main.yml
ci/: script.sh
skeptic/: Cargo.toml  lib.rs
skeptic/src/: lib.rs  rt.rs  tests.rs
src/skeptic/: Cargo.toml  lib.rs
testing/: Cargo.toml  build.rs
testing/tests/: hashtag-test.md  section-names.md  static-file-test.md
tests/: combined-tests.md  hashtag-test.md  macro_use.md  section-names.md  should-panic-test.md
