[package]
name = "skeptic-readme"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
build = "build.rs"

# This is needed for the build script, 'build.rs'
[build-dependencies.skeptic]
path = "src/skeptic"

# This is needed for the tests created by the buildscript
[dev-dependencies.skeptic]
path = "src/skeptic"

# This makes the tests that link to Skeptic in README.md work.
# It is not needed for normal uses of Skeptic.
[dependencies.skeptic]
path = "src/skeptic"
