[package]
name = "testing"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
build = "build.rs"
publish = false

# This is needed for the build script, 'build.rs'
[build-dependencies.skeptic]
path = "../skeptic"

# This is needed for the tests created by the buildscript
[dev-dependencies.skeptic]
path = "../skeptic"

# This makes the tests that link to Skeptic in README.md work.
# It is not needed for normal uses of Skeptic.
[dependencies.skeptic]
path = "../skeptic"
