[package]
authors = ["Brian Anderson <banderson@mozilla.com>",
           "Michał Budzyński <budziq@gmail.com>"]
description = "Test your Rust markdown documentation via Cargo"
license = "MIT/Apache-2.0"
name = "skeptic"
version = "0.13.4"
readme = "README.md"
repository = "https://github.com/budziq/rust-skeptic"
homepage = "https://github.com/budziq/rust-skeptic"
documentation = "https://docs.rs/skeptic"
keywords = ["markdown", "documentation", "testing"]
categories = ["development-tools", "development-tools::testing"]

[badges]
travis-ci = { repository = "budziq/rust-skeptic" }
appveyor = { repository = "budziq/rust-skeptic" }

[dependencies]
tempdir = "0.3"
glob = "0.3"
walkdir = "2.2"
serde_json = "1.0"
cargo_metadata = "0.10"
bytecount = "0.6"

[dev-dependencies]
unindent = "0.1"

[dependencies.error-chain]
version = "0.12"
default-features = false

[dependencies.pulldown-cmark]
version = "0.2"
default-features = false

[lib]
name = "skeptic"
path = "lib.rs"
